started naomi's ch7 comments, appendices moved

--- a/thesis/ack.tex
+++ b/thesis/ack.tex
@@ -10,8 +10,8 @@ Chapters 4 and 5 rely heavily on results from the Radio Galaxy Zoo citizen scien
 
 A special thank you to those who proof-read this thesis: Rachel Alger, Jakub Nabaglo, Henry Zovaro, Jack Livingston, and Eloise Birchall.
 
-Finally, I would like to thank my family, Rachel, Geoff, and Kelly Alger; as well as my partner Sarah Lawson; and my friends Nicholas Hogan, Mitchell Busby, and Jakub Nabaglo; for their emotional support through my PhD.
+Finally, I would like to thank my family, Rachel, Geoff, and Kelly Alger; as well as my partner Sarah Lawson; and my friends Nicholas Hogan, Mitchell Busby, Bronnagh Norris, and Jakub Nabaglo; for their emotional support through my PhD.
 
 \clearpage
 
-The work and writing behind this thesis was completed in Australia on the land of the Ngunnawal and Ngambri people. I would like to acknowledge and celebrate the traditional custodians of this land, and pay my respects to their Elders past, present, and emerging.
+The work and writing behind this thesis was completed in Australia on the land of the Ngunnawal and Ngambri people. I would like to acknowledge and celebrate the traditional custodians of this land, and pay my respects to their Elders past and present.
