--- a/thesis/faraday.tex
+++ b/thesis/faraday.tex
@@ -2,7 +2,7 @@
 \chapter{Faraday Complexity}
 \label{cha:faraday}
 
-This chapter is based on my paper \emph{Interpretable Faraday Complexity Classification}, by M. J. Alger, C. S. Ong, J. D. Livingston, J. L. Nabaglo, N. M. McClure-Griffiths, and O. I. Wong; submitted to the Publications of the Astronomical Society of Australia (PASA).
+This chapter is based on my paper \emph{Interpretable Faraday Complexity Classification}, by M. J. Alger, J. D. Livingston, N. M. McClure-Griffiths, J. L. Nabaglo, O. I. Wong, and C. S. Ong; accepted and to be published by the Publications of the Astronomical Society of Australia (PASA).
 
 Faraday complexity describes whether a spectropolarimetric observation has simple or complex magnetic structure. Quickly determining the Faraday complexity of a spectropolarimetric observation is important for processing large, polarised radio surveys. Finding simple sources lets us build rotation measure grids, and finding complex sources lets us follow these sources up with slower analysis techniques or further observations. We introduce five features that can be used to train simple, interpretable machine learning classifiers for estimating Faraday complexity. We train logistic regression and extreme gradient boosted tree classifiers on simulated polarised spectra using our features, analyse their behaviour, and demonstrate our features are effective for both simulated and real data. This is the first application of machine learning methods to real spectropolarimetry data. With 95 per cent accuracy on simulated ASKAP data and 90 per cent accuracy on simulated ATCA data, our method performs comparably to state-of-the-art convolutional neural networks while being simpler and easier to interpret. Logistic regression trained with our features behaves sensibly on real data and its outputs are useful for sorting polarised sources by apparent Faraday complexity.
 
@@ -176,7 +176,7 @@ M.J.A. and J.D.L. were supported by the Australian Government Research Training 
 \section{Experimental method and results}
 \label{sec:faraday-experiment-classification}
 
-  We applied our classifiers to classify simulated (\autoref{sec:faraday-cnn-comparison} and \ref{sec:faraday-results-simulated}) and real (\autoref{sec:faraday-results-observed}) FDFs. We replicated the experimental setup of \citet{brown_classifying_2018} for comparison with the state-of-the-art CNN classification method, and we also applied our method to 142 real FDFs observed with the Australia Telescope Compact Array (ATCA) from Livingston et al. (2020, submitted) and \citet{osullivan_broad-band_2017}.
+  We applied our classifiers to classify simulated (\autoref{sec:faraday-cnn-comparison} and \ref{sec:faraday-results-simulated}) and real (\autoref{sec:faraday-results-observed}) FDFs. We replicated the experimental setup of \citet{brown_classifying_2018} for comparison with the state-of-the-art CNN classification method, and we also applied our method to 142 real FDFs observed with the Australia Telescope Compact Array (ATCA) from \citet{livingston21faraday} and \citet{osullivan_broad-band_2017}.
 
   \subsection{Data}
 
@@ -291,190 +291,3 @@ M.J.A. and J.D.L. were supported by the Australian Government Research Training 
 \label{sec:faraday-conclusion}
 
   We developed a simple, interpretable machine learning method for estimating Faraday complexity. Our interpretable features were derived by comparing observed FDFs to idealised simple FDFs, which we could determine both for simulated and real observations. We demonstrated the effectiveness of our method on both simulated and real data. Using simulated data, we found that our classifiers were 95 per cent accurate, with near perfect recall (specificity) of Faraday simple sources. On simulated data that matched existing observations, our classifiers obtained an accuracy of 90 per cent. Evaluating our classifiers on real data gave the plausible results shown in \autoref{fig:faraday-all-observed-fdfs-lr}, and marks the first application of machine learning to observed FDFs. Future work will need to narrow the domain gap to improve transfer of classifiers trained on simulations to real, observed data.
-
-\appendix
-
-\section{2-Wasserstein begets Faraday moments}
-  \label{sec:faraday-w2-to-faraday-moments}
-    Minimising the 2-Wasserstein distance between a model FDF and the simple manifold gives the second Faraday moment of that FDF. Let $\tilde F$ be the sum-normalised model FDF and let $\tilde S$ be the sum-normalised simple model FDF:
-    \begin{align}
-      \tilde F(\phi) &= \frac{A_0 \delta(\phi - \phi_0) + A_1 \delta(\phi - \phi_1)}{A_0 + A_1}\\
-      \tilde S(\phi; \phi_w) &= \delta(\phi - \phi_w).
-    \end{align}
-    The $W_2$ distance, usually defined on probability distributions, can be extended to one-dimensional complex functions $A$ and $B$ by normalising them:
-      \begin{align}
-        \label{eq:faraday-w2}
-        D_{W_2}\infdivx{A}{B}^2 &= \inf_{\gamma \in \Gamma(A, B)} \iint_{\phi_{\min}}^{\phi_{\max}} |x - y|^2\ \mathrm{d}\gamma(x, y) \\
-        \label{eq:faraday-normalised}
-        \tilde A(\phi) &= \frac{|A(\phi)|}{\int_{\phi_{\min}}^{\phi_{\max}} |A(\theta)|\ \mathrm{d}\theta}\\
-        \tilde B(\phi) &= \frac{|B(\phi)|}{\int_{\phi_{\min}}^{\phi_{\max}} |B(\theta)|\ \mathrm{d}\theta}
-      \end{align}
-      where $\Gamma(A, B)$ is the set of couplings of $A$ and $B$, i.e. the set of joint probability distributions that marginalise to $A$ and $B$; and $\inf_{\gamma \in \Gamma(A, B)}$ is the infimum over $\Gamma(A, B)$. This can be interpreted as the minimum cost to `move' one probability distribution to the other, where the cost of moving one unit of probability mass is the squared distance it is moved.
-
-    The set of couplings $\Gamma(\tilde F, \tilde S)$ is the set of all joint probability distributions $\gamma$ such that
-    \begin{align}
-      \int_{\phi_{\min}}^{\phi_{\max}} \gamma(\phi, \varphi)\ \mathrm{d}\phi &= \tilde S(\varphi; \phi_w),\\
-      \int_{\phi_{\min}}^{\phi_{\max}} \gamma(\phi, \varphi)\ \mathrm{d}\varphi &= \tilde F(\phi).
-    \end{align}
-    The coupling that minimises the integral in \autoref{eq:faraday-w2} will be the optimal transport plan between $\tilde F$ and $\tilde S$. Since $\tilde F$ and $\tilde S$ are defined in terms of delta functions, the optimal transport problem reduces to a discrete optimal transport problem and the optimal transport plan is:
-    \begin{equation}
-      \gamma(\phi, \varphi) = \frac{A_0 \delta(\phi - \phi_0) + A_1 \delta(\phi - \phi_1)}{A_0 + A_1} \delta(\varphi - \phi_w).
-    \end{equation}
-    In other words, to move the probability mass of $\tilde S$ to $\tilde F$, a fraction $A_0/(A_0 + A_1)$ is moved from $\phi_w$ to $\phi_0$ and the complementary fraction $A_1/(A_0 + A_1)$ is moved from $\phi_w$ to $\phi_1$. Then:
-    \begin{align}
-      D_{W_2}\infdivx{\tilde F}{\tilde S}^2 &= \iint_{\phi_{\min}}^{\phi_{\max}} |\phi - \varphi|^2\ \mathrm{d}\gamma(\phi, \varphi)\\
-        &= \frac{A_0 (\phi_0 - \phi_w)^2 + A_1 (\phi_1 - \phi_w)^2}{A_0 + A_1}.
-    \end{align}
-    To obtain the $W_2$ distance to the simple manifold, we need to minimise this over $\phi_w$. Differentiate with respect to $\phi_w$ and set equal to zero to find
-    \begin{equation}
-      \phi_w = \frac{A_0 \phi_0 + A_1 \phi_1}{A_0 + A_1}.
-    \end{equation}
-    Substituting this back in, we find
-    \begin{align}
-      \varsigma_{W_2}(F)^2 &= \frac{A_0 A_1}{A_0 + A_1}(\phi_0 - \phi_1)^2
-    \end{align}
-    which is the Faraday moment.
-
-\section{Euclidean distance in the no-RMSF case}
-\label{sec:faraday-euclidean-calculation}
-
-  In this section we calculate the minimumised Euclidean distance evaluated on a model FDF (\autoref{eq:faraday-true-fdf}). Let $\tilde F$ be the sum-normalised model FDF and let $\tilde S$ be the normalised simple model FDF:
-  \begin{align}
-    \tilde F(\phi) &= \frac{A_0 \delta(\phi - \phi_0) + A_1 \delta(\phi - \phi_1)}{A_0 + A_1}\\
-    \tilde S(\phi; \phi_e) &= \delta(\phi - \phi_e).
-  \end{align}
-
-  The Euclidean distance between $\tilde F$ and $\tilde S$ is then
-  \begin{align}
-    &D_E\infdivx{\tilde F(\phi)}{\tilde S(\phi; \phi_e)}^2\\
-    &= \int_{\phi_{\min}}^{\phi_{\max}} \left|\tilde F(\phi) - \delta(\phi - \phi_e) \right|^2\ \mathrm{d}\phi.
-  \end{align}
-
-  Assume $\phi_0 \neq \phi_1$ (otherwise, $D_E$ will always be either $0$ or $2$). If $\phi_e = \phi_0$, then
-  \begin{align}
-    &D_E\infdivx{\tilde F(\phi)}{\tilde S(\phi; \phi_e)}^2\\
-      &= \frac{1}{(A_0 + A_1)^2} \int_{\phi_{\min}}^{\phi_{\max}} A_1^2 \left|\delta(\phi - \phi_1) - \delta(\phi - \phi_0) \right|^2\ \mathrm{d}\phi\\
-      &= \frac{2 A_1^2}{(A_0 + A_1)^2}
-  \end{align}
-  and similarly for $\phi_e = \phi_1$. If $\phi_e \neq \phi_0$ and $\phi_e \neq \phi_1$, then
-  \begin{equation}
-    D_E\infdivx{\tilde F(\phi)}{\tilde S(\phi; \phi_e)}^2 = \frac{A_0^2 + A_1^2 + 1}{(A_0 + A_1)^2}.
-  \end{equation}
-  The minimised Euclidean distance when $\phi_0 \neq \phi_1$ is therefore
-  \begin{align}
-      D_E(F) &= \min_{\phi_e \in \mathbb{R}} D_E\infdivx{F(\phi)}{F_{\mathrm{simple}}(\phi; \phi_e)}\\
-          &= \sqrt{2} \frac{\min(A_0, A_1)}{A_0 + A_1}.
-  \end{align}
-  If $\phi_0 = \phi_1$, then the minimised Euclidean distance is 0.
-
-\section{Hyperparameters for LR and XGB}
-\label{sec:faraday-hyperparameters}
-
-  This section contains tables of the hyperparameters that we used for our classifiers. \autoref{tab:faraday-hyperparameters-xgb} and \autoref{tab:faraday-hyperparameters-lr} tabulate the hyperparameters for XGB and LR respectively for the `ATCA' dataset. \autoref{tab:faraday-hyperparameters-xgb-askap12} and \autoref{tab:faraday-hyperparameters-lr-askap12} tabulate the hyperparameters for XGB and LR respectively for the `ASKAP' dataset.
-
-  \begin{table}[htbp]
-    \caption{\label{tab:faraday-hyperparameters-xgb} XGB hyperparameters for the `ATCA' dataset.}
-    \begin{tabular}{ll}
-      \hline\hline
-      Parameter & Value\\\hline
-      colsample\textunderscore{}bytree & 0.912\\
-      gamma & 0.532\\
-      learning\textunderscore{}rate & 0.1\\
-      max\textunderscore{}depth & 7\\
-      min\textunderscore{}child\textunderscore{}weight & 2\\
-      scale\textunderscore{}pos\textunderscore{}weight & 1\\
-      subsample & 0.557\\
-      n\textunderscore{}estimators & 135\\
-      reg\textunderscore{}alpha & 0.968\\
-      reg\textunderscore{}lambda & 1.420\\
-      \hline\hline
-    \end{tabular}
-  \end{table}
-
-  \begin{table}[htbp]
-    \caption{\label{tab:faraday-hyperparameters-lr} LR hyperparameters for the `ATCA' dataset.}
-    \begin{tabular}{ll}
-      \hline\hline
-      Parameter & Value\\\hline
-      penalty & L1\\
-      C & 1.668\\
-      \hline\hline
-    \end{tabular}
-  \end{table}
-
-  \begin{table}[htbp]
-    \caption{\label{tab:faraday-hyperparameters-xgb-askap12} XGB hyperparameters for the `ASKAP' dataset.}
-    \begin{tabular}{ll}
-      \hline\hline
-      Parameter & Value\\\hline
-      colsample\textunderscore{}bytree & 0.865\\
-      gamma & 0.256\\
-      learning\textunderscore{}rate & 0.1\\
-      max\textunderscore{}depth & 6\\
-      min\textunderscore{}child\textunderscore{}weight & 1\\
-      scale\textunderscore{}pos\textunderscore{}weight & 1\\
-      subsample & 0.819\\
-      n\textunderscore{}estimators & 108\\
-      reg\textunderscore{}alpha & 0.049\\
-      reg\textunderscore{}lambda & 0.454\\
-      \hline\hline
-    \end{tabular}
-  \end{table}
-
-  \begin{table}[htbp]
-    \caption{\label{tab:faraday-hyperparameters-lr-askap12} LR hyperparameters for the `ASKAP' dataset.}
-    \begin{tabular}{ll}
-      \hline\hline
-      Parameter & Value\\\hline
-      penalty & L2\\
-      C & 0.464\\
-      \hline\hline
-    \end{tabular}
-  \end{table}
-
-\section{Predictions on real data}
-\label{sec:faraday-real-data-fig}
-
-  This section contains \autoref{fig:faraday-all-observed-fdfs-lr} and \autoref{fig:faraday-all-observed-fdfs-xgb}, which shows the predicted probability of being Faraday complex for all real data used in this paper, drawn from \citet{livingston21faraday} and \citet{osullivan_broad-band_2017}.
-
-  \begin{figure*}
-    \centering
-    \includegraphics[width=\linewidth]{faraday-images/both_spectra_lr.pdf}
-    \caption[The 142 observed FDFs ordered by LR-estimated probability of being Faraday complex.]{The 142 observed FDFs ordered by LR-estimated probability of being Faraday complex. Livingston-identified components are shown in orange while O'Sullivan-identified components are shown in magenta. Simpler FDFs (as deemed by the classifier) are shown in purple while more complex FDFs are shown in green, and the numbers overlaid indicate the LR estimate. A lower number indicates a lower probability that the corresponding source is complex, i.e. lower numbers correspond to simpler spectra.}
-    \label{fig:faraday-all-observed-fdfs-lr}
-  \end{figure*}
-
-  \begin{figure*}
-    \centering
-    \includegraphics[width=\linewidth]{faraday-images/both_spectra_xgb.pdf}
-    \caption[The 142 observed FDFs ordered by XGB-estimated probability of being Faraday complex.]{The 142 observed FDFs ordered by XGB-estimated probability of being Faraday complex. Livingston-identified components are shown in orange while O'Sullivan-identified components are shown in magenta. Simpler FDFs (as deemed by the classifier) are shown in purple while more complex FDFs are shown in green, and the numbers overlaid indicate the XGB estimate. A lower number indicates a lower probability that the corresponding source is complex, i.e. lower numbers correspond to simpler spectra.}
-    \label{fig:faraday-all-observed-fdfs-xgb}
-  \end{figure*}
-
-\section{Simulating observed FDFs}
-\label{sec:faraday-simulating}
-
-  We simulated FDFs by approximating them by arrays of complex numbers. An FDF $F$ is approximated on the domain $[-\phi_{\max}, \phi_{\max}]$ by a vector $\vec F \in \mathbb R^d$:
-    \begin{equation}
-      \label{eq:faraday-vec-f}
-      \vec F_j = \sum_{k = 0}^1 A_k \delta(-\phi_{\max} + j \delta \phi - \phi_k)
-    \end{equation}
-    where $\delta\phi = (\phi_{\max} - \phi_{\min}) / d$ and $d$ is the number of Faraday depth samples in the FDF.
-    $\vec F$ is sampled by uniformly sampling its parameters:
-    \begin{align}
-      \label{eq:faraday-model-distributions}
-      \phi_k &\in [\phi_{\min}, \phi_{\min} + \delta\phi, \dots, \phi_{\max}]\\
-      A_k &\sim \mathcal U(0, 1).
-    \end{align}
-    We then generate a vector polarisation spectrum $\vec P \in \mathbb R^m$ from $\vec F$ using a \autoref{eq:faraday-discrete-f-to-p}:
-    \begin{equation}
-      \label{eq:faraday-discrete-f-to-p}
-      \vec P_\ell = \sum_{j = 0}^{j} F_j e^{2i(\phi_{\min} + j\delta_\phi)\lambda^2_\ell}\ \mathrm{d}\phi.
-    \end{equation}
-    $\lambda^2_\ell$ is the discretised value of $\lambda^2$ at the $\ell$th index of $\vec P$. This requires a set of $\lambda^2$ values, which depends on the dataset being simulated. These values can be treated as the channel wavelengths at which the polarisation spectrum was observed. We then add Gaussian noise with variance $\sigma^2$ to each element of $\vec P$ to obtain a discretised noisy observation $\hat{\vec{P}}$. Finally, we perform RM synthesis using the Canadian Initiative for Radio Astronomy Data Analysis \texttt{RM} package\footnote{\url{https://github.com/CIRADA-Tools/RM}}, which is a \texttt{Python} module that implements a discrete version of RM synthesis:
-    \begin{equation}
-      \label{eq:faraday-discrete-rm-synthesis}
-      \hat{\vec{F}}_j = m^{-1} \sum_{\ell = 1}^m \vec{\hat P}_\ell e^{-2i(\phi_{\min} + j\delta_\phi)\lambda^2_\ell}.
-    \end{equation}
-
-\unappendix
