--- a/thesis/frontmatter.tex
+++ b/thesis/frontmatter.tex
@@ -27,7 +27,7 @@
 
 % }
 
-\vspace*{7cm}
+\vspace*{4cm}
     I declare that the research presented in this thesis represents original
     work that I carried out during my candidature at the Australian National
     University, except for contributions to multi-author papers incorporated
@@ -35,14 +35,12 @@
     Contribution.
 
     \begin{itemize}
-      \item \emph{Radio Galaxy Zoo: Machine learning for radio source host galaxy cross-identification}, by \textbf{M. J. Alger}, J. K. Banfield, C. S. Ong, L. Rudnick, O. I. Wong, C. Wolf, H. Andernach, R. P. Norris, and S. S. Shabala. Published in 2018 in the \emph{Monthly Notices of the Royal Astronomy Society}.
-      \item \emph{Radio Galaxy Zoo: Radio luminosity functions of extended sources}, by \textbf{M. J. Alger}, O. I. Wong, C. S. Ong, N. M. McClure-Griffiths, H. Andernach, L. Rudnick, S. S. Shabala, A. F. Garon, J. K. Banfield, A. D. Kapi\'nska, R. P. Norris, and A. J. M. Thomson. Not yet submitted.
-      \item \emph{Interpretable Faraday Complexity Classification}, by \textbf{M. J. Alger}, J. D. Livingston, N. M. McClure-Griffiths, J. L. Nabaglo., O. I. Wong, and C. S. Ong. To be published in \emph{Publications of the Astronomical Society of Australia}.
+      \item \emph{Radio Galaxy Zoo: Machine learning for radio source host galaxy cross-identification}, by \textbf{M. J. Alger}, J. K. Banfield, C. S. Ong, L. Rudnick, O. I. Wong, C. Wolf, H. Andernach, R. P. Norris, and S. S. Shabala. Published in 2018 in the \emph{Monthly Notices of the Royal Astronomy Society}. \autoref{cha:cross-id} in this thesis.
+      \item \emph{Radio Galaxy Zoo: Radio luminosity functions of extended sources}, by \textbf{M. J. Alger}, O. I. Wong, C. S. Ong, N. M. McClure-Griffiths, H. Andernach, L. Rudnick, S. S. Shabala, A. F. Garon, J. K. Banfield, A. D. Kapi\'nska, R. P. Norris, and A. J. M. Thomson. Not yet submitted. \autoref{cha:rlfs} in this thesis.
+      \item \emph{Interpretable Faraday Complexity Classification}, by \textbf{M. J. Alger}, J. D. Livingston, N. M. McClure-Griffiths, J. L. Nabaglo., O. I. Wong, and C. S. Ong. Accepted; to be published in \emph{Publications of the Astronomical Society of Australia}. \autoref{cha:faraday} in this thesis.
     \end{itemize}
 
-    For all three papers I wrote the vast majority of the content, produced all figures except where noted, and conducted all experiments. Other authors reviewed the papers, made suggestions, and discussed ideas.
-
-    Senior author or collaborating authors endorsement:
+    For all three papers I wrote the entirety of the content, produced all figures except where noted, and conducted all experiments. Other authors reviewed the papers, made suggestions, discussed ideas, and vitally contributed to the Radio Galaxy Zoo project.
 
 \vspace*{4cm}
 
