--- a/thesis/intro.tex
+++ b/thesis/intro.tex
@@ -74,7 +74,7 @@ We begin by introducing key concepts from radio astronomy in \autoref{cha:backgr
 
 My main contributions to radio astroinformatics in this thesis are:
 \begin{itemize}
-    \item I introduce a new method for cross-identifying radio emission which can learn from existing catalogues---the first application of machine learning to cross-identification (\autoref{cha:cross-id});
+    \item I introduce a new method for cross-identifying radio emission which can learn from existing catalogues, the first application of machine learning to radio cross-identification (\autoref{cha:cross-id});
     \item I demonstrate an application of this new method to the creation of fractional radio luminosity functions, which require considerably more cross-identifications than non-fractional radio luminosity functions, in the process creating the largest available catalogue of extended, cross-identified radio sources (\autoref{cha:rlfs});
     \item I produce a fractional radio luminosity function with divisions based on mid-infrared colours associated with the host galaxies of the radio emission, helping to understand how radio galaxies evolve throughout the Universe (\autoref{cha:rlfs});
     \item I highlight the requirement of considerably more redshifts in understanding future wide-area radio surveys (\autoref{cha:rlfs});
