--- a/thesis/macros.tex
+++ b/thesis/macros.tex
@@ -189,6 +189,21 @@
   \gdef\thesection{\@arabic\c@section}}
 \makeatother
 
+% %% https://tex.stackexchange.com/a/160850
+% \makeatletter
+% %% The "\@seccntformat" command is an auxiliary command
+% %% (see pp. 26f. of 'The LaTeX Companion,' 2nd. ed.)
+% \def\@seccntformat#1{\@ifundefined{#1@cntformat}%
+%    {\csname the#1\endcsname\quad}  % default
+%    {\csname #1@cntformat\endcsname}% enable individual control
+% }
+% \let\oldappendix\appendix %% save current definition of \appendix
+% \renewcommand\appendix{%
+%     \oldappendix
+%     \newcommand{\section@cntformat}{\appendixname~\thesection:\quad}
+% }
+% \makeatother
+
 \renewcommand{\chapterautorefname}{Chapter}%
 \renewcommand{\sectionautorefname}{Section}%
 \renewcommand{\subsectionautorefname}{Section}%
