--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -11100,34 +11100,10 @@
           photometric red.pdf:application/pdf}
 }
 
-@Unpublished{     wong17,
-  author    = {Wong, O. I. and Willett, K. W. and Rudnick, L. and Garon,
-          A. and Banfield, J. K. and Shabala, S. S. and Norris, R. P.
-          and Simmons, B. D. and Seymour, N. and Kapi\'nska, A. D.
-          and Middelberg, E. and others},
-  title     = {{Radio Galaxy Zoo Data Release 1}: morphological
-          classifications of 100,000 {FIRST} radio sources},
-  year      = {in prep. }
-}
-
-@Unpublished{     wong17,
-  author    = {Wong, O. I. and Willett, K. W. and Rudnick, L. and Garon,
-          A. and Banfield, J. K. and Shabala, S. S. and Norris, R. P.
-          and Simmons, B. D. and Seymour, N. and Kapi\'nska, A. D.
-          and Middelberg, E. and others},
-  title     = {{Radio Galaxy Zoo Data Release 1}: morphological
-          classifications of 100,000 {FIRST} radio sources},
-  year      = {in prep. }
-}
-
-@Unpublished{     wong17,
-  author    = {Wong, O. I. and Willett, K. W. and Rudnick, L. and Garon,
-          A. and Banfield, J. K. and Shabala, S. S. and Norris, R. P.
-          and Simmons, B. D. and Seymour, N. and Kapi\'nska, A. D.
-          and Middelberg, E. and others},
-  title     = {{Radio Galaxy Zoo Data Release 1}: morphological
-          classifications of 100,000 {FIRST} radio sources},
-  year      = {in prep. }
+@Unpublished{     wong21rgz,
+  author    = {Wong, O. I. and Garon, A. F. and Alger, M. J. and Willett, K. W. and Rudnick, L. and Banfield, J. K. and Swan, J. and Shabala, S. S. and Andernach, H. and Norris, R. P. and Simmons, B. D. and Kapi\'nska, A. D. and Seymour, N. et al.},
+  title     = {{Radio Galaxy Zoo Data Release 1}: visual identification of 75,641 radio morphologies from the FIRST and ATLAS surveys},
+  year      = {in prep.}
 }
 
 @Article{     wong_determining_2016,
